Few fixes